# chip8

./: .gitignore  CMakeLists.txt  README.md
src/: decompile.cpp  main.cpp  ui.hpp
src/lib/: CMakeLists.txt
src/lib/chip8/: chip8.cpp  chip8.hpp
src/lib/instructions/: instruction_grp.hpp  instructions.cpp  instructions.hpp  parser.hpp  types.hpp
src/lib/ui/: ui.hpp
src/lib/utils/: format.hpp
src/tests/: ui.cpp
